# SERA

./: .gitignore  README.md  pyproject.toml
modules/SWE-agent/: .gitignore  README.md  pyproject.toml
modules/SWE-agent/sb-cli-reports/: eval.py
modules/SWE-agent/sweagent/: types.py
modules/SWE-agent/sweagent/agent/: agents.py  models.py
modules/SWE-agent/sweagent/environment/: swe_env.py
modules/SWE-agent/sweagent/run/: _progress.py  batch_instances.py  run_batch.py  server.py
modules/SWE-agent/sweagent/tools/: parsing.py  tools.py
modules/SWE-agent/sweagent/utils/: log.py
modules/SWE-agent/tools/call_path_anthropic/: config.yaml
modules/SWE-agent/tools/call_path_review_on_submit_m/: config.yaml
modules/code2flow/code2flow/: python.py
sera/: config_schema.py  constants.py  main.py  utils.py
sera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sera/configs/: config.yaml  config_specialize_personal.yaml  config_specialize_sweb.yaml  specialization_anthropic.yaml  specialization_django.yaml  specialization_personal.yaml  specialization_sympy.yaml  swesmith_scaling.yaml
sera/configs/sweagent/: e2e.yaml  qwen.yaml
sera/datagen/data/: convert_swesmith_to_hermes.py  download_swebench_images.py  filter.py  save_repo_pr.py  scale.py  scrape_github.py  view_data.py
sera/datagen/inference/: launch_glm45.sh  launch_glm46.sh  launch_qwen3_models.sh
sera/datagen/train/: convert_axolotl_checkpoint.py  filter_dataset_hf.py  filter_dataset_tt.py  train_axolotl_32b.sh  train_axolotl_8b.sh  train_unsloth.sh  train_unsloth_lora.py
(+23 files in other folders)
