[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sera"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "swesmith==0.0.7",
  "hydra-core==1.4.0.dev1",
  "omegaconf>=2.4.0.dev4",
  "anthropic==0.76.0",
  "networkx==3.6.1",
  "axolotl==0.12.0",
  "axolotl[flash-attn,deepspeed]",
  "cut-cross-entropy[transformers] @ git+https://github.com/axolotl-ai-cloud/ml-cross-entropy.git@631d646",
  "deepspeed==0.15.4",
  "torchtune"
]

[tool.setuptools]
packages = ["sera"]
